--- a/TI_1_HW1.ipynb
+++ b/TI_1_HW1.ipynb
@@ -32,7 +32,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Theory on the Gradient Descent algorithm"
+    "# Theory on the Gradient Descent algorithm\n",
+    "\n",
+    "## What is gradient descent?\n",
+    "\n",
+    "Gradient descent is an optimization algorithm which is commonly-used to train machine learning models and neural networks. It trains machine learning models by minimizing errors between predicted and actual results.\n",
+    "\n",
+    "\n",
+    "## How Does Gradient Descent Work?\n",
+    "\n",
+    "Before diving into gradient descent, it may help to review some concepts from linear regression. You may recall the formula for the slope of a line: \\( y = mx + b \\), where \\( m \\) represents the slope and \\( b \\) is the y-intercept.\n",
+    "\n",
+    "You might also remember plotting a scatterplot in statistics and finding the line of best fit, which involved calculating the error between the actual output and the predicted output (\\( \\hat{y} \\)) using the mean squared error formula. The gradient descent algorithm behaves similarly, but it is based on a convex function.\n",
+    "\n",
+    "### Gradient Descent Process\n",
+    "\n",
+    "The starting point is just an arbitrary point from which we evaluate performance. From that starting point, we find the derivative (or slope), and from there, we can use a tangent line to observe the steepness of the slope. The slope will inform the updates to the parameters—i.e., the weights and bias. The slope at the starting point will be steeper, but as new parameters are generated, the steepness should gradually reduce until it reaches the lowest point on the curve, known as the point of convergence.\n",
+    "\n",
+    "### Goal of Gradient Descent\n",
+    "\n",
+    "Similar to finding the line of best fit in linear regression, the goal of gradient descent is to minimize the cost function or the error between the predicted and actual \\( y \\). To achieve this, it requires two data points: a direction and a learning rate. These factors determine the partial derivative calculations for future iterations, allowing the algorithm to gradually arrive at the local or global minimum (i.e., the point of convergence).\n",
+    "\n",
+    "### Learning Rate\n",
+    "\n",
+    "The learning rate (also referred to as step size or alpha) is the size of the steps taken to reach the minimum. This value is typically small and is evaluated and updated based on the behavior of the cost function. High learning rates result in larger steps, but they risk overshooting the minimum. Conversely, a low learning rate has smaller steps, which provides more precision, but the number of iterations can compromise overall efficiency as it takes more time and computations to reach the minimum.\n",
+    "\n",
+    "### Cost Function\n",
+    "\n",
+    "The cost (or loss) function measures the difference or error between the actual \\( y \\) and the predicted \\( \\hat{y} \\) at its current position. This improves the machine learning model's efficacy by providing feedback to the model so it can adjust the parameters to minimize the error and find the local or global minimum. The model continuously iterates, moving along the direction of steepest descent (or the negative gradient) until the cost function is close to or at zero. At this point, the model stops learning.\n",
+    "\n",
+    "## Optimizing the Matyas function with gradient descent\n",
+    "\n",
+    "### Gradient Descent Formula\n",
+    "\n",
+    "$$\n",
+    "\\theta = \\theta - \\alpha \\cdot \\nabla J(\\theta)\n",
+    "$$\n",
+    "\n",
+    "where:  \n",
+    "\n",
+    "- *$\\theta$*: parameters to be optimized  \n",
+    "- *$\\alpha$*: learning rate, which determines the step size at each iteration  \n",
+    "- *$J(\\theta)$*: cost function to be minimized  \n",
+    "- *$\\nabla J(\\theta)$*: gradient of the cost function with respect to $\\theta$, which is a vector of partial derivatives  "
    ]
   },
   {
