feat: Add markdown explanations and partial derivatives for the Rosenbrock function

--- a/TI_1_HW1.ipynb
+++ b/TI_1_HW1.ipynb
@@ -74,7 +74,12 @@
     "- *$\\theta$*: parameters to be optimized  \n",
     "- *$\\alpha$*: learning rate, which determines the step size at each iteration  \n",
     "- *$J(\\theta)$*: cost function to be minimized  \n",
-    "- *$\\nabla J(\\theta)$*: gradient of the cost function with respect to $\\theta$, which is a vector of partial derivatives  "
+    "- *$\\nabla J(\\theta)$*: gradient of the cost function with respect to $\\theta$, which is a vector of partial derivatives  \n",
+    "\n",
+    "\n",
+    "```markdown\n",
+    "1. We select the function to optimize\n",
+    "```"
    ]
   },
   {
@@ -89,6 +94,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```markdown\n",
+    "2. Define the partial derivatives of the function with respect to x and y\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Partial derivatives of the Rosenbrock function\n",
+    "\n",
+    "# derivative of the matyas function with respect to x\n",
+    "def df_dx(x, y):\n",
+    "    return -400 * x * (y - x**2) - 2 * (1 - x)\n",
+    "\n",
+    "# derivative of the matyas function with respect to y\n",
+    "def df_dy(x, y):\n",
+    "    return 200 * (y - x**2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -99,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
