feat: Implement gradient descent function with markdown explanation

--- a/TI_1_HW1.ipynb
+++ b/TI_1_HW1.ipynb
@@ -120,6 +120,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```markdown\n",
+    "3. Definition of the gradient descent function: This function minimizes matyas(x, y) by iteratively updating x and y using their gradients (df_dx, df_dy) and a learning rate. It records the parameter history and returns the final values and the function result after a set number of iterations.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gradient_descent(start_x, start_y, learning_rate, num_iterations):\n",
+    "    # Initialize the parameters\n",
+    "    x = start_x\n",
+    "    y = start_y\n",
+    "    history = []\n",
+    "    \n",
+    "    # Perform the gradient descent iterations\n",
+    "    for i in range(num_iterations):\n",
+    "        # Calculate the gradients\n",
+    "        grad_x = df_dx(x, y)\n",
+    "        grad_y = df_dy(x, y)\n",
+    "        \n",
+    "        # Update the parameters\n",
+    "        x = x - learning_rate * grad_x\n",
+    "        y = y - learning_rate * grad_y\n",
+    "        \n",
+    "        # Save the history of the parameters\n",
+    "        history.append((x, y, rosenbrock(x, y)))\n",
+    "    \n",
+    "    return x, y, rosenbrock(x, y), history"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
