fix: Update markdown header to reflect partial derivatives of the Matyas function

--- a/TI_1_HW1.ipynb
+++ b/TI_1_HW1.ipynb
@@ -109,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Partial derivatives of the Rosenbrock function\n",
+    "# Partial derivatives of the matyas function\n",
     "\n",
     "# derivative of the matyas function with respect to x\n",
     "def df_dx(x, y):\n",
