fix: Update markdown syntax for predicted output notation and adjust execution counts

--- a/TI_1_HW1.ipynb
+++ b/TI_1_HW1.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "Before diving into gradient descent, it may help to review some concepts from linear regression. You may recall the formula for the slope of a line: \\( y = mx + b \\), where \\( m \\) represents the slope and \\( b \\) is the y-intercept.\n",
     "\n",
-    "You might also remember plotting a scatterplot in statistics and finding the line of best fit, which involved calculating the error between the actual output and the predicted output (\\( \\hat{y} \\)) using the mean squared error formula. The gradient descent algorithm behaves similarly, but it is based on a convex function.\n",
+    "You might also remember plotting a scatterplot in statistics and finding the line of best fit, which involved calculating the error between the actual output and the predicted output ( $\\hat{y}$ ) using the mean squared error formula. The gradient descent algorithm behaves similarly, but it is based on a convex function.\n",
     "\n",
     "### Gradient Descent Process\n",
     "\n",
@@ -59,7 +59,7 @@
     "\n",
     "### Cost Function\n",
     "\n",
-    "The cost (or loss) function measures the difference or error between the actual \\( y \\) and the predicted \\( \\hat{y} \\) at its current position. This improves the machine learning model's efficacy by providing feedback to the model so it can adjust the parameters to minimize the error and find the local or global minimum. The model continuously iterates, moving along the direction of steepest descent (or the negative gradient) until the cost function is close to or at zero. At this point, the model stops learning.\n",
+    "The cost (or loss) function measures the difference or error between the actual \\( y \\) and the predicted $\\hat{y}$ at its current position. This improves the machine learning model's efficacy by providing feedback to the model so it can adjust the parameters to minimize the error and find the local or global minimum. The model continuously iterates, moving along the direction of steepest descent (or the negative gradient) until the cost function is close to or at zero. At this point, the model stops learning.\n",
     "\n",
     "## Optimizing the Matyas function with gradient descent\n",
     "\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
